--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,10 +9,18 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.1.0",
+    "@expo/vector-icons": "^10.2.1",
+    "@react-native-async-storage/async-storage": "^1.13.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
     "axios": "^0.20.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jsx-a11y": "6.3.0",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4",
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
     "expo-image-picker": "~9.1.0",
@@ -22,6 +30,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "0.27.1",
+    "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
@@ -31,6 +40,13 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-onboarding-swiper": "^1.1.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "react-native-web": "~0.13.7",
     "typescript": "~3.9.5"
   },
